Fri Dec  9 21:48:48 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Array_VarOut_T.h:
        * tao/Array_VarOut_T.inl:
        
          In the TAO_Array_Forany_T<> template class:
        
          - Changed initialization values for the CORBA::Boolean
            nocopy_ member from '0' to 'false'.
            
          - Removed the 'const' qualifier from the nocopy_ member.
            This member gets assigned to in the class assignment
            operator, and because of this, tools like insure++
            complain. It's a mystery why C++ compilers don't
            complain as well. This fix closes [BUGID:2326]. Thanks
            to Brian Buesker <bbuesker@qualcomm.com> for reporting
            the problem.

Thu Dec  8 16:37:06 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/RTCORBA/Activity/Activity.mpc:

	  Do override "macros" variable.  Add to it instead.  Fixes
	  problem where versioned namespace preprocessor symbols were not
	  added to generated Makefiles/projects.

	* examples/RTCORBA/Activity/Activity.h:
	* examples/RTCORBA/Activity/Builder.h:
	* examples/RTCORBA/Activity/Job_i.h:
	* examples/RTCORBA/Activity/POA_Holder.h:
	* examples/RTCORBA/Activity/Periodic_Task.h:
	* examples/RTScheduling/Job_i.h:
	* examples/RTScheduling/POA_Holder.h:
	* examples/Simple/bank/AccountManager_i.h:

	  Fixed versioned namespace support.

Thu Dec  8 14:19:52 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/CosEvent/CEC_Dispatching_Task.h:
	* orbsvcs/orbsvcs/LoadBalancing/LB_LoadAlert_Handler.h:

	  Fixed versioned namespace support.  The versioning macros calls
	  were missing.

Thu Dec  8 20:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * interop-tests/wchar/interop_wchar.mpc:
        * examples/PluggableUDP/tests/Basic/Basic.mpc:
        * examples/PluggableUDP/tests/SimplePerformance/SimplePerformance.mpc:
        * examples/POA/Default_Servant/POA_Default_Servant.mpc: