@@ -1,3 +1,9 @@
+Fri Dec  9 16:36:27 USMST 2005  Yan Dai  <dai_y@ociweb.com>
+
+        * tests/CSD_Strategy_Tests/TP_Foo_B/Foo_B_Statistics.cpp:
+
+          Made actual_vs_expected() dump more details with the failure.
+          
 Fri Dec  9 21:48:48 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * tao/Array_VarOut_T.h:
